# screen-shoter-pro-v5

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: AnnotationWidget.cpp  AnnotationWidget.h  CaptureManager.cpp  CaptureManager.h  CountdownOverlay.cpp  CountdownOverlay.h  FlashOverlay.cpp  FlashOverlay.h  HistoryPanel.cpp  HistoryPanel.h  MainWindow.cpp  MainWindow.h  ManualScrollCapture.cpp  ManualScrollCapture.h  PinWindow.cpp  PinWindow.h  RecordingCompleteDialog.cpp  RecordingCompleteDialog.h  RegionSelector.cpp  RegionSelector.h  ScreenRecorder.cpp  ScreenRecorder.h  SettingsDialog.cpp  SettingsDialog.h  SettingsManager.h  Translator.cpp  Translator.h  TrayManager.cpp  TrayManager.h  main.cpp  resources.qrc
src/styles/: dark.qss
